# sy-data-science-exploration

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py  tox.ini  tree.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: explore_notebook.ipynb
