[tool.poetry]
name = "sy-data-science-exploration"
version = "1.0.0"
description = "Repo for exploring and learning ML methodologies and algorithms"
authors = ["Echo_www <wuxx1308@umn.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sy_data_science_exploration"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.1"
numpy = "^1.24.3"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "==7.2.*"
pytest-cov = "==4.0.*"
black = "==20.*"
pre-commit = "^3.3.2"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
flake8 = "^6.0.0"
sphinx = "^7.0.1"
coverage = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
